# dockerfiles

a/: Dockerfile  project.cabal
haskell-lts/1/: Dockerfile
